kubernetes/gabernetes/apps/immich/app/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: egress-immich
spec:
  endpointSelector:
    matchLabels:
      policy.gabe565.com/egress-immich: "true"
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: immich
            app.kubernetes.io/name: immich
            app.kubernetes.io/controller: server
      toPorts:
        - ports:
            - port: "2283"
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: immich
  namespace: immich
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: immich
      app.kubernetes.io/controller: server
  ingress:
    - fromEndpoints:
        - matchLabels:
            policy.gabe565.com/egress-immich: "true"
          matchExpressions:
            - key: io.kubernetes.pod.namespace
              operator: Exists
